@@ -1,3 +1,6 @@
+2008-10-05 Fix problem with AFM files that don't specify the font's
+           full name or family name. - JKS
+
 2008-10-04 Added 'scilimits' kwarg to Axes.ticklabel_format() method,
            for easy access to the set_powerlimits method of the
            major ScalarFormatter. - EF
